# loadex

./: .gitignore  LICENSE  package_build.bat  package_release.bat  pyproject.toml  readme.md
.github/: copilot-instructions.md
loadex/: classes.py
src/loadex/: __init__.py  classes.py
src/loadex/browser/: README.md  app.py  session_cache.py
src/loadex/browser/pages/: dlc_comparison.py  filelist.py  overview.py  plot_stats.py  sensorlist.py  sensors.py  timeseries.py  upload.py
src/loadex/classes/: __init__.py  dataset.py  designloadcases.py  filelist.py  sensorlist.py  statistics.py  virtualsensor.py
src/loadex/cli/: process_files.py  process_one_file.py
src/loadex/data/: database.py  datamodel.py
src/loadex/formats/: __init__.py  bladed_out_file.py  parquet_file.py
test/: test_bladed_cleanup.py  test_cli.py  test_dataset.py
test/data/Bladed/: idling.$07  idling.$08  idling.$14  idling.$22  idling.$23  idling.$24  idling.$25  idling.$26  idling.$41  idling.$42  idling.$43  idling.$44  idling.$65  idling.$77  idling.$me  idling.%07  idling.%08  idling.%14  idling.%22  idling.%23  idling.%24  idling.%25  idling.%26  idling.%41  idling.%42  idling.%43  idling.%44  idling.%65  idling.%77  parked.$07  parked.$08  parked.$14  parked.$22  parked.$23  parked.$24  parked.$25  parked.$26  parked.$41  parked.$42  parked.$43  (+17 more)
