[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loadex"
version = "0.1.7"
description = "Tools to facilitate wind turbine loads data exchange"
authors = [
    { name="Cameron Brown", email="cab@goldwinddenmark.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "sqlalchemy",
    "pyarrow",
    "rainflow",
    "weio"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["loadex*"]

[project.optional-dependencies]
dev = [
    "pytest"
]
